[gd_scene load_steps=40 format=2]

[ext_resource path="res://world.gd" type="Script" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://player.png" type="Texture" id=3]
[ext_resource path="res://player/idle/idle_0.png" type="Texture" id=4]
[ext_resource path="res://player/idle/idle_1.png" type="Texture" id=5]
[ext_resource path="res://player/idle/idle_2.png" type="Texture" id=6]
[ext_resource path="res://player/idle/idle_3.png" type="Texture" id=7]
[ext_resource path="res://player/idle/idle_4.png" type="Texture" id=8]
[ext_resource path="res://player/idle/idle_5.png" type="Texture" id=9]
[ext_resource path="res://player/idle/idle_6.png" type="Texture" id=10]
[ext_resource path="res://player/idle/idle_7.png" type="Texture" id=11]
[ext_resource path="res://player/jump/idle_0.png" type="Texture" id=12]
[ext_resource path="res://player/run/idle_0.png" type="Texture" id=13]
[ext_resource path="res://player/run/idle_1.png" type="Texture" id=14]
[ext_resource path="res://player/run/idle_2.png" type="Texture" id=15]
[ext_resource path="res://player/run/idle_3.png" type="Texture" id=16]
[ext_resource path="res://terrain_loader.gd" type="Script" id=17]
[ext_resource path="res://main_cam.gd" type="Script" id=18]
[ext_resource path="res://bg_1.png" type="Texture" id=19]
[ext_resource path="res://background_1.gd" type="Script" id=20]
[ext_resource path="res://bg_2.png" type="Texture" id=21]
[ext_resource path="res://bg_3.png" type="Texture" id=22]
[ext_resource path="res://map_0.gd" type="Script" id=23]
[ext_resource path="res://text/map_help.png" type="Texture" id=24]
[ext_resource path="res://map_helper.gd" type="Script" id=25]
[ext_resource path="res://fade.png" type="Texture" id=26]
[ext_resource path="res://fade.gd" type="Script" id=27]
[ext_resource path="res://opening_text.gd" type="Script" id=28]
[ext_resource path="res://text/intro_help.png" type="Texture" id=29]
[ext_resource path="res://opening_help.gd" type="Script" id=30]
[ext_resource path="res://fog.png" type="Texture" id=31]
[ext_resource path="res://fog_0.gd" type="Script" id=32]
[ext_resource path="res://overlay.png" type="Texture" id=33]
[ext_resource path="res://overlay.gd" type="Script" id=34]
[ext_resource path="res://sfx/jump.wav" type="AudioStream" id=35]
[ext_resource path="res://sfx/maps.wav" type="AudioStream" id=36]
[ext_resource path="res://music.wav" type="AudioStream" id=37]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "jump",
"speed": 2.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[node name="world" type="Node"]
script = ExtResource( 1 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 6.5, 11 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="texture" type="Sprite" parent="player"]
visible = false
texture = ExtResource( 3 )

[node name="hitbox" type="CollisionShape2D" parent="player"]
scale = Vector2( 0.65, 1.1 )
shape = SubResource( 1 )

[node name="animated_player" type="AnimatedSprite" parent="player"]
frames = SubResource( 2 )
animation = "run"

[node name="terrain" type="Node" parent="."]

[node name="terrain_loader" type="Node" parent="."]
script = ExtResource( 17 )

[node name="terrain_data" type="Node" parent="terrain_loader"]

[node name="camera" type="Node2D" parent="."]
script = ExtResource( 18 )

[node name="main_cam" type="Camera2D" parent="camera"]

[node name="background_1_0" type="Sprite" parent="camera"]
z_index = -100
texture = ExtResource( 19 )
script = ExtResource( 20 )

[node name="background_1_1" type="Sprite" parent="camera"]
z_index = -100
texture = ExtResource( 19 )
script = ExtResource( 20 )

[node name="background_2_0" type="Sprite" parent="camera"]
z_index = -99
texture = ExtResource( 21 )
script = ExtResource( 20 )

[node name="background_2_1" type="Sprite" parent="camera"]
z_index = -99
texture = ExtResource( 21 )
script = ExtResource( 20 )

[node name="background_3_0" type="Sprite" parent="camera"]
z_index = -98
texture = ExtResource( 22 )
script = ExtResource( 20 )

[node name="background_3_1" type="Sprite" parent="camera"]
z_index = -98
texture = ExtResource( 22 )
script = ExtResource( 20 )

[node name="maps" type="Node2D" parent="camera"]

[node name="map_0" type="Sprite" parent="camera/maps"]
z_index = 200
script = ExtResource( 23 )

[node name="map_1" type="Sprite" parent="camera/maps"]
z_index = 200
script = ExtResource( 23 )

[node name="map_2" type="Sprite" parent="camera/maps"]
z_index = 200
script = ExtResource( 23 )

[node name="map_helper" type="Sprite" parent="camera/maps"]
z_index = 200
texture = ExtResource( 24 )
script = ExtResource( 25 )

[node name="fade" type="Sprite" parent="camera"]
z_index = 350
texture = ExtResource( 26 )
script = ExtResource( 27 )

[node name="opening_text" type="Sprite" parent="camera"]
z_index = 400
script = ExtResource( 28 )

[node name="opening_help" type="Sprite" parent="camera"]
z_index = 400
texture = ExtResource( 29 )
script = ExtResource( 30 )

[node name="fog_0" type="Sprite" parent="camera"]
z_index = 90
texture = ExtResource( 31 )
script = ExtResource( 32 )

[node name="fog_1" type="Sprite" parent="camera"]
z_index = 90
texture = ExtResource( 31 )
script = ExtResource( 32 )

[node name="fog_2" type="Sprite" parent="camera"]
z_index = 90
texture = ExtResource( 31 )
script = ExtResource( 32 )

[node name="overlay" type="Node2D" parent="."]

[node name="overlay" type="Sprite" parent="overlay"]
z_index = 100
texture = ExtResource( 33 )
script = ExtResource( 34 )

[node name="overlay2" type="Sprite" parent="overlay"]
z_index = 100
texture = ExtResource( 33 )
script = ExtResource( 34 )

[node name="overlay3" type="Sprite" parent="overlay"]
z_index = 100
texture = ExtResource( 33 )
script = ExtResource( 34 )

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 35 )
volume_db = -15.146

[node name="maps_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 36 )
volume_db = -11.107

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 37 )
autoplay = true
